--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -50,8 +50,8 @@ mail.smtp.SMTPSecure = ssl
 mail.smtp.Host       = smtpHost
 mail.smtp.Port       = 465
 mail.smtp.Sender     = smtp@sender
-mail.smtp.Username   = smtp@username
-mail.smtp.Password   = "password"
+mail.smtp.Username   = piotrek.mielke@gmail.com
+mail.smtp.Password   = "posredniak93"
 
 ;db settings
 resources.db.adapter = "PDO_MYSQL"
@@ -77,7 +77,7 @@ max_thumb_file_size  = 1048576
 max_file_size = 8388608
 
 ;;contact settings
-contact.email = "contact@email"
+contact.email = "piotrek.mielke@gmail.com"
 contact.site = "http://yourdomain"
 
 ;HTMLPurifier settings
