--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -51,7 +51,7 @@ mail.smtp.Host       = smtpHost
 mail.smtp.Port       = 465
 mail.smtp.Sender     = smtp@sender
 mail.smtp.Username   = piotrek.mielke@gmail.com
-mail.smtp.Password   = "posredniak93"
+mail.smtp.Password   = "password"
 
 ;db settings
 resources.db.adapter = "PDO_MYSQL"
